descomplicando_kubernetes/kind/ingress/aws-service-giro.yaml
apiVersion: v1
kind: Service
metadata:
  name:  giropops-senhas-svc
  labels:
    app: giropops-senhas
spec:
  selector:
    app:  giropops-senhas
  type:  LoadBalancer
  ports:
  - name:  tcp-giropops-senhas
    port:  5000
    targetPort: 5000
