descomplicando_kubernetes/kind/ingress/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name:  redis-service
  labels:
    app: redis
spec:
  selector:
    app:  redis
  type:  ClusterIP
  ports:
  - protocol: TCP
    port:  6379
    targetPort: 6379
