descomplicando_kubernetes/kind/ingress/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: giropops-senhas
  name: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: linuxtips/giropops-senhas:1.0
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        
---
apiVersion: v1
kind: Service
metadata:
  name:  giropops-senhas-svc
  labels:
    app: giropops-senhas
spec:
  selector:
    app:  giropops-senhas
  type:  ClusterIP
  ports:
  - name:  tcp-giropops-senhas
    port:  5000
    targetPort: 5000
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
          - containerPort: 6379
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name:  redis-service
  labels:
    app: redis
spec:
  selector:
    app:  redis
  type:  ClusterIP
  ports:
  - protocol: TCP
    port:  6379
    targetPort: 6379

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops.381491901852.realhandsonlabs.net 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas-svc
            port:
              number: 5000
